# model-repair

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  asan_suppressions.txt
.github/workflows/: appimage.yml  release.yml  windows.yml
cli/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake  EmbedSpv.cmake  FetchDependencies.cmake  patch_lib3mf_gcc16.cmake
docs/: documentation.html  gpu-compute-analysis.md  index.html
gui/: BatchWindow.cpp  BatchWindow.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MeshViewWidget.cpp  MeshViewWidget.hpp  NormalToDisplacementWindow.cpp  NormalToDisplacementWindow.hpp  PreviewWindow.cpp  PreviewWindow.hpp  RepairWorker.cpp  RepairWorker.hpp  ReportView.cpp  ReportView.hpp  WizardWindow.cpp  WizardWindow.hpp  WizardWorker.cpp  WizardWorker.hpp  main.cpp  model-repair.desktop  timer_util.hpp
include/modelrepair/: Decimate.hpp  Mesh.hpp  NormalMapDisplace.hpp  NormalToDisplacement.hpp  Remesh.hpp  RemoveInternalGeometry.hpp  RepairOptions.hpp  RepairPipeline.hpp  RepairReport.hpp  ShellSeparation.hpp  Smooth.hpp  Subdivide.hpp  Version.hpp.in  WallThickness.hpp
include/modelrepair/io/: GlbIO.hpp  MeshIO.hpp  ObjIO.hpp  PlyIO.hpp  StlIO.hpp  ThreeMFIO.hpp
src/: CMakeLists.txt  Mesh.cpp  RepairPipeline.cpp  RepairReport.cpp
src/analysis/: NormalToDisplacement.cpp  VulkanPoissonSolver.cpp  VulkanPoissonSolver.hpp  WallThickness.cpp
src/io/: GlbIO.cpp  MeshIO.cpp  ObjIO.cpp  PlyIO.cpp  StlIO.cpp  ThreeMFIO.cpp
src/repairs/: Decimate.cpp  FillHoles.cpp  FixNonManifold.cpp  FixNormals.cpp  MergeDuplicateVertices.cpp  NormalMapDisplace.cpp  Remesh.cpp  RemoveDegenerateTriangles.cpp  RemoveInternalGeometry.cpp  RemoveInternalGeometryStep.cpp  RemoveSelfIntersections.cpp  ShellSeparation.cpp  Smooth.cpp  Subdivide.cpp  VulkanSmoothing.cpp  VulkanSmoothing.hpp
src/shaders/: poisson_axpy.comp  poisson_precond.comp  poisson_pupdate.comp  poisson_reduce.comp  poisson_scalar.comp  poisson_spmv.comp  smooth_laplacian.comp
tests/: CMakeLists.txt  generate_test_meshes.py  test_mesh_io.cpp  test_pipeline.cpp  test_remesh.cpp  test_repairs.cpp
tests/meshes/: degenerate_triangles.stl  inverted_normals.stl  non_manifold_edge.stl  open_surface.stl  self_intersecting.stl  valid_cube.stl
